Fix Project responsiveness on small screens

--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -74,7 +74,7 @@
         flex-direction:column;
         align-items:flex-end;
         text-align:right;
-        min-height:50vh;
+        min-height:60vh;
     }
 
 
